; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/boot/extr_ebony.c_ebony_init.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/boot/extr_ebony.c_ebony_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@ebony_fixups = common dso_local global i32 0, align 4
@platform_ops = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@ibm44x_dbcr_reset = common dso_local global i32 0, align 4
@ebony_mac0 = common dso_local global i8* null, align 8
@ebony_mac1 = common dso_local global i8* null, align 8
@_dtb_start = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ebony_init(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* @ebony_fixups, align 4
  store i32 %5, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @platform_ops, i32 0, i32 1), align 4
  %6 = load i32, i32* @ibm44x_dbcr_reset, align 4
  store i32 %6, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @platform_ops, i32 0, i32 0), align 4
  %7 = load i8*, i8** %3, align 8
  store i8* %7, i8** @ebony_mac0, align 8
  %8 = load i8*, i8** %4, align 8
  store i8* %8, i8** @ebony_mac1, align 8
  %9 = load i32, i32* @_dtb_start, align 4
  %10 = call i32 @fdt_init(i32 %9)
  %11 = call i32 (...) @serial_console_init()
  ret void
}

declare dso_local i32 @fdt_init(i32) #1

declare dso_local i32 @serial_console_init(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
